@@ -22,3 +22,4 @@
 	KConfig reads and writes colors and fonts
 	added to the search path of jpeg/giflib KDEDIR/lib
 	updated khtmlw to 0.5.3
+	added some Q_OBJECT to drag.h
